# codenets

./: .env  .gitignore  LICENSE  README.md  guide.md  main.py  mypy.ini  pylama.ini  pyproject.toml  requirements.txt
codenets/: losses.py  main.py  recordable.py  save.py  tensorboard_utils.py  utils.py
codenets/codesearchnet/: Untitled-1  __init__.py  ast_build.py  bidouille.py  data.py  dataset.py  dataset_main.py  dataset_utils.py  eval.py  huggingface.py  multi_branch_model.py  multi_branch_predictions.py  multi_branch_test.py  multi_branch_train.py  poolers.py  predictions.py  sbert_build.py  single_branch_ctx.py  single_branch_eval.py  single_branch_model.py  single_branch_predictions.py  single_branch_train.py  tokenizer_build.py  tokenizer_huggingface_build.py  tokenizer_recs.py  tokenizer_recs_build.py  (+2 more)
conf/: code_search_bert_2020_02_01_1500.conf  code_search_bert_2020_02_03_20_00.conf  code_search_bert_lg_2020_02_04_15_00.conf  code_search_bert_lg_2020_02_04_21_00 copy.conf  code_search_bert_lg_2020_02_05_00_00.conf  code_search_bert_lg_2020_02_06_18_00.conf  code_search_bert_lg_2020_02_06_22_30.conf  code_search_bert_lg_2020_02_07_10_00.conf  code_search_bert_query_1_code_1_2020_02_10_11_00 copy.conf  code_search_bert_query_1_code_1_2020_02_11_22_00 copy.conf  code_search_bert_query_code_siamese_2020_02_12_00_00 copy.conf  code_search_bert_query_code_siamese_2020_02_14_16_00.conf  code_search_bert_query_code_siamese_2020_02_15_14_00.conf  default.conf  qc_ast_2020_03_13.conf  qc_ast_2020_03_15 copy.conf  qc_ast_2020_03_18.conf  qc_ast_2020_03_19.conf  qc_ce_2020_02_23_01_00 copy.conf  qc_ce_long_seq_2020_02_24.conf  qc_ce_sbert_2020_02_27.conf  qc_ce_sbert_2020_02_28.conf  qc_ce_sbert_2020_02_29 copy.conf  qc_ce_sbert_2020_03_01.conf  qc_ce_subtoken_2020_02_25.conf  qc_ce_subtoken_larger_2020_02_26.conf  qc_lambda_2020_02_20_12_30 copy.conf  qc_sbert_lambda_2020_03_02.conf  qc_sbert_lambda_2020_03_04.conf  qc_sbert_lambda_2020_03_07 copy.conf  query_code_siamese_2020_02_15_14_00 copy.conf  query_code_siamese_2020_02_17_21_30 copy.conf  query_code_siamese_2020_02_19_13_00.conf  query_code_siamese_albert_2020_02_18_08_30.conf  query_code_siamese_albert_2020_02_18_14_00.conf
test/: test_recordable.py
wandb/: settings
(+24 files in other folders)
