[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "codenets"
version = "0.1.0"
description = "code & neural nets."
authors = ["Voitot Pascal"]
readme = "README.md"

# packages = [
#     { include = "src/**/*.py" },
# ]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.15"
torch = "^1.3.0"
pandas = "^0.25.1"
tokenizers = "^0.2.1"
transformers = "^2.3.0"
loguru = "^0.3.2"
docopt = "^0.6.2"
dpu-utils = "^0.2.8"
wandb = "^0.8.22"
pathos = "^0.2.5"
pyhocon = "^0.3.54"
annoy = "^1.16.3"
tables = "^3.6.1"
sentence_transformers = "*"

[tool.poetry.dev-dependencies]
black = "19.3b0"
pylama = "7.6.6"
pytest = "3.10.1"
mypy = "^0.761"
jupyterlab = "^1.1"
matplotlib = "^3.1"
rope = "^0.14.0"
codecov = "2.0.15"
pytest-cov = "2.6.1"
pylint = "^2.3"
tensorboard = "^2.0"
tensorboardX = "^1.9"


[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''
