[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "codenets"
version = "0.1.0"
description = "code & neural nets."
authors = ["Voitot Pascal"]
readme = "README.md"

# packages = [
#     { include = "src/**/*.py" },
# ]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24"
torch = "^2.0.0"
pandas = "^2.0.0"
#tokenizers = "^0.2.1"
transformers = "^4.27.0"
loguru = "^0.6"
docopt = "^0.6"
dpu-utils = "^0.6"
wandb = "^0.14"
pathos = "^0.3"
pyhocon = "^0.3.60"
annoy = "^1.17"
#tables = "^3.6.1"
sentence_transformers = "^2.2"
tree_sitter = "^0.20"
# tree-sitter = { file = "../../tools/py-tree-sitter/tree_sitter-0.1.0_mandubian-cp37-cp37m-linux_x86_64.whl" }
#pyarrow = "*"
fastparquet = "^2023.2"
# apex = "*"

[tool.poetry.dev-dependencies]
black = "*"
pylama = "*"
pytest = "*"
mypy = "^1.1"
jupyterlab = "*"
matplotlib = "*"
rope = "*"
codecov = "*"
pytest-cov = "*"
pylint = "*"
tensorboard = "*"
tensorboardX = "*"


[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''
